CREATE: cv menu

--- a/config.toml
+++ b/config.toml
@@ -16,22 +16,22 @@ footnotereturnlinkcontents = "↩"
     name = "Home"
     url = "/"
     weight = 1
-#    
-#[[menu.main]]
-#    name = "About"
-#    url = "/about/"
-#    weight = 2
 #
 [[menu.main]]
     name = "Categories"
     url = "/categories/"
-    weight = 3
+    weight = 2
 #    
 [[menu.main]]
     name = "Tags"
     url = "/tags/"
+    weight = 3
+#    
+[[menu.main]]
+    name = "cv"
+    url = "/cv/"
     weight = 4
-#
+#    
 #[[menu.main]]
 #    name = "Subscribe"
 #    url = "/index.xml"
