--- a/config.toml
+++ b/config.toml
@@ -7,6 +7,7 @@ disqusShortname = ""
 ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
 preserveTaxonomyNames = true
 footnotereturnlinkcontents = "↩"
+relativeURLs = true
 
 [permalinks]
     post = "/post/:year/:month/:day/:slug/"
